--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,12 @@
 </head>
 <body>
 
+<!--
+  Insert into flash messages
+  <p class="notice"><%= notice %></p>
+  <p class="alert"><%= alert %></p>
+ -->
+
 <%= yield %>
 
 </body>
