--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,20 +1,122 @@
+
 <!DOCTYPE html>
 <html>
 <head>
-  <title>IotaProject</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-  <%= csrf_meta_tags %>
+  <meta charset="UTF-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Centaurus - Bootstrap Admin Template</title>
+
+  <script type="text/javascript">
+      //<![CDATA[
+      try{if (!window.CloudFlare) {var CloudFlare=[{verbose:0,p:1406277561,byc:0,owlid:"cf",bag2:1,mirage2:0,oracle:0,paths:{cloudflare:"/cdn-cgi/nexp/dokv=88e434a982/"},atok:"8cb3a657124bdf0d63a906e69e3d203c",petok:"f8b68756b930d8a64401574ca74c2fe029724787-1406741733-1800",zone:"adbee.technology",rocket:"0",apps:{"ga_key":{"ua":"UA-49262924-2","ga_bs":"2"}}}];!function(a,b){a=document.createElement("script"),b=document.getElementsByTagName("script")[0],a.async=!0,a.src="//ajax.cloudflare.com/cdn-cgi/nexp/dokv=97fb4d042e/cloudflare.min.js",b.parentNode.insertBefore(a,b)}()}}catch(e){};
+      //]]>
+  </script>
+  <%= stylesheet_link_tag "application", :media => "all", "data-turbolinks-track" => true %>
+
+  <link href="css/libs/font-awesome.css" type="text/css" rel="stylesheet"/>
+
+  <link rel="stylesheet" type="text/css" href="css/compiled/layout.css">
+  <link rel="stylesheet" type="text/css" href="css/compiled/elements.css">
+
+
+  <link href='//fonts.googleapis.com/css?family=Open+Sans:400,600,700,300|Titillium+Web:200,300,400' rel='stylesheet' type='text/css'>
+
+  <link type="image/x-icon" href="favicon.png" rel="shortcut icon"/>
+  <!--[if lt IE 9]>
+  <script src="js/html5shiv.js"></script>
+  <script src="js/respond.min.js"></script>
+  <![endif]-->
+  <script type="text/javascript">
+      /* <![CDATA[ */
+      var _gaq = _gaq || [];
+      _gaq.push(['_setAccount', 'UA-49262924-2']);
+      _gaq.push(['_trackPageview']);
+
+      (function() {
+          var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+          ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+          var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+      })();
+
+      (function(b){(function(a){"__CF"in b&&"DJS"in b.__CF?b.__CF.DJS.push(a):"addEventListener"in b?b.addEventListener("load",a,!1):b.attachEvent("onload",a)})(function(){"FB"in b&&"Event"in FB&&"subscribe"in FB.Event&&(FB.Event.subscribe("edge.create",function(a){_gaq.push(["_trackSocial","facebook","like",a])}),FB.Event.subscribe("edge.remove",function(a){_gaq.push(["_trackSocial","facebook","unlike",a])}),FB.Event.subscribe("message.send",function(a){_gaq.push(["_trackSocial","facebook","send",a])}));"twttr"in b&&"events"in twttr&&"bind"in twttr.events&&twttr.events.bind("tweet",function(a){if(a){var b;if(a.target&&a.target.nodeName=="IFRAME")a:{if(a=a.target.src){a=a.split("#")[0].match(/[^?=&]+=([^&]*)?/g);b=0;for(var c;c=a[b];++b)if(c.indexOf("url")===0){b=unescape(c.split("=")[1]);break a}}b=void 0}_gaq.push(["_trackSocial","twitter","tweet",b])}})})})(window);
+      /* ]]> */
+  </script>
 </head>
-<body>
+<body id="login-page-full" style="background: url(/assets/bg.jpg);">
+<div id="login-full-wrapper">
+  <div class="container">
+    <div class="row">
+      <div class="col-xs-12">
+        <div id="login-box">
+          <div class="row">
+            <div class="col-xs-12">
+              <header id="login-header">
+                <div id="login-logo"  style="background: #ffffff; padding: 0px;">
+                  <img src="/assets/logo.gif" alt=""  style="height: 140px;"/>
+                </div>
+              </header>
+              <div id="login-box-inner">
+                <form role="form" action="index.html">
+                  <div class="input-group">
+                    <span class="input-group-addon"><i class="fa fa-user"></i></span>
+                    <input class="form-control" type="text" placeholder="Email адрес">
+                  </div>
+                  <div class="input-group">
+                    <span class="input-group-addon"><i class="fa fa-key"></i></span>
+                    <input type="password" class="form-control" placeholder="Пароль">
+                  </div>
+                  <div id="remember-me-wrapper">
+                    <div class="row">
+                      <div class="col-xs-6">
+                        <div class="checkbox-nice">
+                          <input type="checkbox" id="remember-me" checked="checked"/>
+                          <label for="remember-me">
+                            Запомни меня
+                          </label>
+                        </div>
+                      </div>
+                      <a href="#" id="login-forget-link" class="col-xs-6">
+                        Забыли пароль?
+                      </a>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-xs-12">
+                      <button type="submit" class="btn btn-success col-xs-12">Вход</button>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-xs-12">
+                      <p class="social-text">Или воспользуйтесь аккаунтом</p>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-xs-12 col-sm-6">
+                      <button type="submit" class="btn btn-primary col-xs-12 btn-facebook">
+                        <i class="fa fa-facebook"></i> facebook
+                      </button>
+                    </div>
+                    <div class="col-xs-12 col-sm-6">
+                      <button type="submit" class="btn btn-primary col-xs-12 btn-twitter">
+                        <i class="fa fa-twitter"></i> Twitter
+                      </button>
+                    </div>
+                  </div>
+                </form>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 
-<!--
-  Insert into flash messages
-  <p class="notice"><%= notice %></p>
-  <p class="alert"><%= alert %></p>
- -->
+<script src="js/jquery.js"></script>
+<script src="js/bootstrap.js"></script>
 
-<%= yield %>
+
+<script src="js/scripts.js"></script>
 
 </body>
 </html>
